--- a/src/loadify/loadify.csproj
+++ b/src/loadify/loadify.csproj
@@ -269,6 +269,7 @@
     <Compile Include="Mock\PlaylistsMock.cs" />
     <Compile Include="Model\AlbumModel.cs" />
     <Compile Include="Model\ArtistModel.cs" />
+    <Compile Include="Model\SpotifyObjectModel.cs" />
     <Compile Include="Model\TrackModel.cs" />
     <Compile Include="Model\UserModel.cs" />
     <Compile Include="Audio\IAudioFileDescriptor.cs" />
