--- a/src/loadify/loadify.csproj
+++ b/src/loadify/loadify.csproj
@@ -283,6 +283,7 @@
     <Compile Include="Audio\AudioConverter.cs" />
     <Compile Include="Configuration\PlaylistRepositoryPathConfigurator.cs" />
     <Compile Include="Spotify\PlaylistCollection.cs" />
+    <Compile Include="Spotify\ResourceException.cs" />
     <Compile Include="Spotify\SpotifyObject.cs" />
     <Compile Include="Audio\WaveAudioProcessor.cs" />
     <Compile Include="Audio\WaveToMp3Converter.cs" />
