--- a/src/loadify/loadify.csproj
+++ b/src/loadify/loadify.csproj
@@ -274,6 +274,8 @@
     <Compile Include="Model\UserModel.cs" />
     <Compile Include="Audio\IAudioFileDescriptor.cs" />
     <Compile Include="Configuration\IFilePathConfigurator.cs" />
+    <Compile Include="Spotify\ConnectionFailedException.cs" />
+    <Compile Include="Spotify\InvalidCredentialsException.cs" />
     <Compile Include="Spotify\InvalidSpotifyUrlException.cs" />
     <Compile Include="Spotify\LoadifySession.cs" />
     <Compile Include="Model\PlaylistModel.cs" />
@@ -284,10 +286,12 @@
     <Compile Include="Configuration\PlaylistRepositoryPathConfigurator.cs" />
     <Compile Include="Spotify\PlaylistCollection.cs" />
     <Compile Include="Spotify\ResourceException.cs" />
+    <Compile Include="Spotify\SpotifyException.cs" />
     <Compile Include="Spotify\SpotifyObject.cs" />
     <Compile Include="Audio\WaveAudioProcessor.cs" />
     <Compile Include="Audio\WaveToMp3Converter.cs" />
     <Compile Include="Spotify\TrackDownloadService.cs" />
+    <Compile Include="Spotify\UnauthorizedException.cs" />
     <Compile Include="ValueConverter\ExistsToImageSourceConverter.cs" />
     <Compile Include="ValueConverter\ArtistsToStringConverter.cs" />
     <Compile Include="ViewModel\AboutViewModel.cs" />
