--- a/src/loadify/loadify.csproj
+++ b/src/loadify/loadify.csproj
@@ -482,6 +482,7 @@
     <Content Include="libmp3lame.64.dll">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Resource Include="Resources\banner_logo.png" />
     <Resource Include="Resources\minus.png" />
     <Resource Include="Resources\plus.png" />
     <Resource Include="Resources\search.png" />
