Added application icon (thx @Kentika)

--- a/src/loadify/loadify.csproj
+++ b/src/loadify/loadify.csproj
@@ -69,8 +69,7 @@
     <PlatformTarget>x86</PlatformTarget>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>
-    </ApplicationIcon>
+    <ApplicationIcon>Resources\logo.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Caliburn.Micro">
@@ -482,6 +481,7 @@
     <Content Include="libmp3lame.64.dll">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Resource Include="Resources\logo.ico" />
     <Resource Include="Resources\banner_logo.png" />
     <Resource Include="Resources\minus.png" />
     <Resource Include="Resources\plus.png" />
