--- a/src/loadify/App.config
+++ b/src/loadify/App.config
@@ -69,6 +69,9 @@
             <setting name="UILanguage" serializeAs="String">
                 <value>en</value>
             </setting>
+            <setting name="FetchPlaylistsOnStartup" serializeAs="String">
+                <value>False</value>
+            </setting>
         </loadify.Properties.Settings>
     </userSettings>
 </configuration>
