--- a/src/loadify/Properties/Settings.settings
+++ b/src/loadify/Properties/Settings.settings
@@ -26,5 +26,8 @@
     <Setting Name="UILanguage" Type="System.String" Scope="User">
       <Value Profile="(Default)">en</Value>
     </Setting>
+    <Setting Name="FetchPlaylistsOnStartup" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
