Implemented another setting that tracks if the user is starting Loadify for the first time

--- a/src/loadify/App.config
+++ b/src/loadify/App.config
@@ -72,6 +72,9 @@
             <setting name="FetchPlaylistsOnStartup" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="FirstUsage" serializeAs="String">
+                <value>True</value>
+            </setting>
         </loadify.Properties.Settings>
     </userSettings>
 </configuration>
