--- a/src/loadify/Properties/Settings.settings
+++ b/src/loadify/Properties/Settings.settings
@@ -29,5 +29,8 @@
     <Setting Name="FetchPlaylistsOnStartup" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="FirstUsage" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
