--- a/src/loadify/loadify.csproj
+++ b/src/loadify/loadify.csproj
@@ -136,11 +136,13 @@
     <Compile Include="Configuration\IBehaviorSetting.cs" />
     <Compile Include="Configuration\ICredentialsSetting.cs" />
     <Compile Include="Configuration\IDirectorySetting.cs" />
+    <Compile Include="Configuration\IInternalSetting.cs" />
     <Compile Include="Configuration\ILocalizationSetting.cs" />
     <Compile Include="Configuration\ISettingsManager.cs" />
     <Compile Include="Configuration\NETBehaviorSetting.cs" />
     <Compile Include="Configuration\NETCredentialsSetting.cs" />
     <Compile Include="Configuration\NETDirectorySetting.cs" />
+    <Compile Include="Configuration\NETInternalSetting.cs" />
     <Compile Include="Configuration\NETLocalizationSetting.cs" />
     <Compile Include="Configuration\NETSettingsManager.cs" />
     <Compile Include="Event\AddPlaylistRequestEvent.cs" />
