--- a/src/loadify/loadify.csproj
+++ b/src/loadify/loadify.csproj
@@ -153,6 +153,7 @@
     <Compile Include="Event\DownloadContractCancelledEvent.cs" />
     <Compile Include="Event\HideProgressEvent.cs" />
     <Compile Include="Event\LanguageChangedEvent.cs" />
+    <Compile Include="Event\RefreshPlaylistsRequestEvent.cs" />
     <Compile Include="Event\RemovePlaylistRequestEvent.cs" />
     <Compile Include="Event\RemovePlaylistReplyEvent.cs" />
     <Compile Include="Event\SelectedTracksChangedEvent.cs" />
